frontend/src/metabase/public/components/EmbedFrame/EmbedFrame.module.css
body:where(:global(.mb-wrapper)) {
  background-color: transparent;
}

[data-metabase-theme="light"][data-metabase-theme="light"] {
  --mb-color-text-primary: var(--mb-color-text-dark);
  --mb-color-text-secondary: var(--mb-color-text-medium);
  --mb-color-text-tertiary: var(--mb-color-text-light);
}

.EmbedFrame {
  color: var(--mb-color-text-primary);
}

.EmbedFrame,
/* this is to make it work when exporting to pdfs, where the EmbedFrame is not part of the exported dom */
.WithThemeBackground {
  background-color: var(--mb-color-bg-dashboard);
  border-color: var(--mb-color-border);
}

.EmbedFrameHeader,
.EmbedFrameFooter {
  color: var(--mb-color-text-primary);
  background-color: var(--mb-color-bg-dashboard);
}

.EmbedFrame,
.EmbedFrame .DashCard .Card,
.EmbedFrame .ContentContainer,
.EmbedFrame .EmbedFrameHeader,
.EmbedFrame .Separator,
.EmbedFrame .ParameterFieldSet,
.EmbedFrame .ParametersWidgetContainer,
.EmbedFrame .EmbedFrameFooter,
.EmbedFrame .LogoBadge {
  transition: var(--transition-theme-change);
}

.ParameterPanel.AllowSticky {
  position: sticky;
  top: 0;
  left: 0;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: transparent;
}

.ParameterPanel.IsSticky {
  background-color: color-mix(
    in srgb,
    var(--mb-color-bg-white),
    var(--mb-color-bg-dashboard) 15%
  );
  border-bottom-color: var(--mb-color-border);
}

[data-metabase-theme="night"][data-metabase-theme="night"],
/**
  * role="tooltip" works with both legacy and Mantine popover,
  * the legacy Popover however, has the role "tooltip", but with data-theme="popover",
  * so we need to target exactly just tooltips.
  */
[role="tooltip"]:is([data-theme~="tooltip"], :global(.emotion-Tooltip-tooltip)) {
  --mb-color-text-primary: color-mix(
    in srgb,
    var(--mb-color-text-white) 90%,
    transparent
  );
  --mb-color-text-secondary: color-mix(
    in srgb,
    var(--mb-color-text-white) 65%,
    transparent
  );
  --mb-color-text-tertiary: color-mix(
    in srgb,
    var(--mb-color-text-white) 45%,
    transparent
  );
  --mb-color-bg-light: var(--mb-base-color-orion-70);
}

[data-metabase-theme="night"][data-metabase-theme="night"] {
  --mb-color-text-selected: var(--mb-base-color-white);
  --mb-color-text-hover: var(--mb-base-color-brand-30);
  --mb-color-border: var(--mb-color-text-medium);
  --mb-color-bg-dashboard: var(--mb-color-bg-black);
  --mb-color-background: var(--mb-color-bg-black);
  --mb-color-background-selected: var(--mb-base-color-brand-60);
  --mb-color-background-hover: var(--mb-base-color-brand-70);
  --mb-color-background-disabled: var(--mb-base-color-orion-70);
  --mb-color-background-brand: var(--mb-base-color-brand-60);
  --mb-color-switch-off: var(--mb-base-color-orion-70);

  .EmbedFrameHeader,
  .EmbedFrameFooter {
    background-color: var(--mb-color-bg-dashboard);
    border-color: var(--mb-color-border);
  }

  .EmbedFrame .fullscreenNightText {
    transition: var(--transition-theme-change);
  }

  /* A temporary solution until we migrated all colors in visualization to use semantic colors
   e.g. `text-primary`, `text-secondary`, `text-tertiary`. */
  .EmbedFrame svg text {
    fill: var(--mb-color-text-primary);
    stroke: none !important;
  }

  .EmbedFrame .DashCard .Card,
  .dropdown {
    background-color: var(--mb-color-bg-black);
    border: 1px solid var(--mb-color-border);
  }

  .ParameterPanel.IsSticky {
    background-color: color-mix(
      in srgb,
      var(--mb-color-bg-black),
      var(--mb-color-bg-dashboard) 15%
    );
    border-bottom-color: var(--mb-color-border);
  }
}

.NoBackground {
  --mb-color-bg-dashboard: transparent;
}

[data-metabase-theme="transparent"][data-metabase-theme="transparent"] {
  .EmbedFrame {
    background-color: transparent;

    .DashCard .Card {
      background-color: transparent;
    }
  }

  .WithThemeBackground {
    background-color: transparent;
  }

  .EmbedFrameHeader,
  .EmbedFrameFooter {
    background-color: transparent;
  }

  .ParameterPanel.IsSticky {
    background-color: color-mix(
      in srgb,
      var(--mb-color-bg-white),
      transparent 15%
    );
    border-bottom-color: transparent;
  }
}

.CompactExportAsPdfButton {
  position: absolute;
  right: 1rem;
  top: 0.5rem;
  z-index: 1;
}

.CompactExportAsPdfButton.ParametersVisibleWithNoTabs {
  top: 1.75rem;

  /* (metabase#59503) We want to fix this differently (here's the first attempt https://github.com/metabase/metabase/pull/59418).
  So we should just make this work for this particular case for now rather than marking a markup change.

  The reason we need `z-index: 4` here is because the parameter container is defined after this download button in the DOM, and it
  has `z-index: 3`. */
  z-index: 4;
}

